Update more stories style, ensure that part of 3rd story is visible on mobile

--- a/versions/v6/static/scss/_footer.scss
+++ b/versions/v6/static/scss/_footer.scss
@@ -50,6 +50,8 @@
   }
 
   .story-callout {
+    @include make-col(5);
+
     @include media-breakpoint-up(lg) {
       @include make-col(4);
     }
